fix(Autocomplete): ensure value is not visible behind the trigger button

--- a/packages/dnb-eufemia/src/components/autocomplete/style/_autocomplete.scss
+++ b/packages/dnb-eufemia/src/components/autocomplete/style/_autocomplete.scss
@@ -134,8 +134,8 @@
       cursor: text;
     }
 
-    &--has-submit-element .dnb-input__placeholder,
-    &--has-submit-element .dnb-input__input {
+    &--has-inner-element .dnb-input__placeholder,
+    &--has-inner-element .dnb-input__input {
       @include allAbove(small) {
         // same width of submit button
         padding-right: 0 !important; // use important so we avoid to have all sizes in addition
