--- a/packages/dnb-eufemia/src/components/button/style/themes/dnb-button-theme-ui.scss
+++ b/packages/dnb-eufemia/src/components/button/style/themes/dnb-button-theme-ui.scss
@@ -329,11 +329,11 @@
   }
 
   // input-button
-  // Because we can not anymore have a square, we have to trick that part
-  &--input-button#{&}--secondary:not(&--has-text),
   &--input-button#{&}--secondary:not(&--has-text):not([disabled]) {
+    // Because we can not anymore have a square, we have to trick that part
     background-color: transparent;
     box-shadow: none;
+
     &::after {
       content: '';
       position: absolute;
